2009-09-03 Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* misc/hash_table_file.c: Transferred copyright to Greenbone.
	Replaced includes.h by those needed really.

	* misc/hash_table_file.h: Transferred copyright to Greenbone.

2009-09-03  Felix Wolfsteller <felix.wolfsteller@intevation.de>

	* Makefile: Install nasl.h header.

2009-09-03  Felix Wolfsteller <felix.wolfsteller@intevation.de>

	* libopenvas-config.in: Corrected inverted logic: Add -lwmiclient to
	linker flags if libwmiclient found during configure step.

2009-09-03  Felix Wolfsteller <felix.wolfsteller@intevation.de>

	* Makefile: Pass HAVE_WMI client to cmake if libwmiclient was found
	during configure step.

	* libopenvas-config.in: Add -lwmiclient to linker flags if libwmiclient
	found during configure step.

	* nasl/CMakeLists.txt: Link against wmiclient if libwmiclient was found
	during configure step.

2009-09-03  Michael Wiegand <michael.wiegand@intevation.de>

	* configure.in, openvas-libraries.tmpl.in: Added support for
	libwmiclient detection.

	* configure: Regenerated.

2009-09-03  Felix Wolfsteller <felix.wolfsteller@intevation.de>

	* nasl/nasl_smb.c, nasl/nasl_wmi.c: Return NULL if no version info is
	available, as stated in the documentation. This avoid segfaults by
	unguarded calls strdup and strlen. Minor reformatting.

	* nasl/nasl_smb.c, nasl/nasl_wmi.c: Added TODOs about possible memleaks.

2009-09-01  Felix Wolfsteller <felix.wolfsteller@intevation.de>

	* configure: Regenerated.

2009-09-01  Felix Wolfsteller <felix.wolfsteller@intevation.de>

	* nasl/TODO: copied from openvas-nasl/TODO.

	* nasl/ChangeLog-pre-09-2009: Copied (soon old ChangeLog entries).

	* nasl/README.txt: New.

2009-09-01  Felix Wolfsteller <felix.wolfsteller@intevation.de>

	* nasl/CMakeLists.txt: Added target to build the openvas-nasl
	standalone interpreter (works at least on debian machines).

	* MANIFEST: Updated

2009-08-31 Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>
